[package]
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
categories = ["asynchronous", "api-bindings"]
description = "Kubernetes leader election using the coordination.k8s.io API."
edition = "2021"
keywords = ["kubernetes", "election", "coordination", "consensus", "lease"]
license = "MIT/Apache-2.0"
name = "kube-coordinate"
version = "0.2.1"

[dependencies]
chrono = {version = ">=0.4,<0.5", default-features = false}
futures = {version = ">=0.3,<0.4", default-features = false}
k8s-openapi = {version = ">=0.20,<1", default-features = false}
kube = {version = "2", default-features = false, features = ["client", "runtime"]}
rand = {version = "0.9", default-features = false, features = ["thread_rng"]}
thiserror = {version = "2", default-features = false}
tokio = {version = "1", default-features = false, features = ["macros", "sync", "time"]}
tracing = {version = "0.1", default-features = false}

[features]
default = ["k8s_latest"]
k8s_earliest = ["k8s-openapi/earliest"]
v1_30 = ["k8s-openapi/v1_30"]
v1_31 = ["k8s-openapi/v1_31"]
v1_32 = ["k8s-openapi/v1_32"]
v1_33 = ["k8s-openapi/v1_33"]
v1_34 = ["k8s-openapi/v1_34"]
k8s_latest = ["k8s-openapi/latest"]
